[package]
name = "ajajaj"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
embassy-rp = { version = "0.2", features = [
    "unstable-pac",
    "critical-section-impl",
    "boot2-none",
    "rom-func-cache",
    "intrinsics",
    "rom-v2-intrinsics",
] }
libm = "0.2"
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
fixed = "1"
rtic = { version = "*", features = ["thumbv6-backend"] }
rtic-monotonics = { version = "2", features = ["rp2040"] }
rp2040-boot2 = "0.3"
panic-probe = { version = "0.3" } # , features = ["print-rtt"] }
rtt-target = "0.5"
embassy-sync = "0.6"
# embedded-alloc = "0.5"
# critical-section = "1"
embedded-hal = "1"
embedded-hal-async = "1"
# embedded-hal-bus = {version = "0.2", features = ["async"]}

# async-lock = {version = "*", default-features = false}
# concurrent-queue = {version = "2", default-features = false, features = ["portable-atomic"] }
# portable-atomic = {version = "*", features = ["fallback", "require-cas", "critical-section"]}

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
lto = 'fat'
opt-level = "z"
overflow-checks = true
split-debuginfo = "unpacked"

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = "z"
overflow-checks = false
split-debuginfo = "unpacked"

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
incremental = false
opt-level = 0
overflow-checks = false
split-debuginfo = "unpacked"

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
incremental = false
opt-level = 0
overflow-checks = false
split-debuginfo = "unpacked"

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
lto = 'fat'
opt-level = "z"
overflow-checks = true
split-debuginfo = "unpacked"

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = "z"
split-debuginfo = "unpacked"
